--- a/charts/eloq-operator/templates/cert-manager/serving-cert.yaml
+++ b/charts/eloq-operator/templates/cert-manager/serving-cert.yaml
@@ -16,3 +16,5 @@ spec:
     kind: Issuer
     name: {{ include "eloq-operator.name" . }}-selfsigned-issuer
   secretName: {{ include "eloq-operator.name" . }}-webhook-server-cert
+  privateKey:
+    rotationPolicy: Always
