--- a/charts/eloq-operator/templates/metrics/controller-manager-monitor.yaml
+++ b/charts/eloq-operator/templates/metrics/controller-manager-monitor.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.controllerManager.enabledMonitor }}
+{{- if .Values.controllerManager.enableMonitor }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
