--- a/charts/eloq-operator/templates/metrics/metrics-rbac.yaml
+++ b/charts/eloq-operator/templates/metrics/metrics-rbac.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.controllerManager.enabledMonitor }}
+{{- if .Values.controllerManager.enableMonitor }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
