--- a/charts/eloq-operator/templates/metrics/metrics-service.yaml
+++ b/charts/eloq-operator/templates/metrics/metrics-service.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.controllerManager.enabledMonitor }}
+{{- if .Values.controllerManager.enableMonitor }}
 apiVersion: v1
 kind: Service
 metadata:
