feat(crd): add EloqDBClusterTemplate Custom Resource Definition
- Introduced a new CRD for EloqDBClusterTemplate to define reusable configuration templates for EloqDBCluster instances.
- The CRD includes detailed specifications for various parameters such as cluster deployment modes, logging configurations, storage services, and transaction settings.
- Added validation rules to ensure proper configuration based on the selected deployment mode.
- Included additional printer columns for better visibility of template readiness and module types.

--- a/charts/eloq-operator/templates/controller-manager/manager-rbac.yaml
+++ b/charts/eloq-operator/templates/controller-manager/manager-rbac.yaml
@@ -235,9 +235,27 @@ rules:
   resources:
   - eloqdbclustertemplates
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
+- apiGroups:
+  - eloqdbcluster.eloqdata.com
+  resources:
+  - eloqdbclustertemplates/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - eloqdbcluster.eloqdata.com
+  resources:
+  - eloqdbclustertemplates/status
+  verbs:
+  - get
+  - patch
+  - update
 - apiGroups:
   - rbac.authorization.k8s.io
   resources:
