Update README and use github container registry to publish eloq-operator chart (#19)

--- a/charts/eloq-operator/values.yaml
+++ b/charts/eloq-operator/values.yaml
@@ -14,7 +14,7 @@ controllerManager:
     annotations: {}
   image:
     repository: eloqdata/eloq-operator
-    tag: 1.0.0
+    tag: 1.0.1
   imagePullPolicy: Always
   ## In case the above image is pulled from a registry that requires
   ## authentication, a secret containing credentials can be added
@@ -37,6 +37,12 @@ controllerManager:
   watchNamespaces: ""
 
   enableLeaderElection: true
+  ## Maximum average QPS (queries per second) for the operator's client to the Kubernetes API server.
+  ## This value controls client-side throttling; lowering it reduces API load, raising it increases throughput.
+  kubeApiQps: 100
+  ## Maximum burst of requests the operator's client can make to the Kubernetes API server above the QPS limit.
+  ## Typically set higher than kubeApiQps to allow short spikes; tune down if hitting API rate limits.
+  kubeApiBurst: 200
   ## Enable webhooks (validation/mutation)
   enableWebhooks: true
   ## Enable reconciler controllers (set to false for webhook-only mode)
